- Add support for Sass - Move stack into modules folder

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.50.1",
     "vite": "^2.9.5"
   },
   "author": "Akshay Pawar",
