- Check build commands - Add dist to gitignore

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "prod-preview": "vite preview"
   },
   "devDependencies": {
     "sass": "^1.50.1",
